--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -10,8 +10,8 @@ import /init.${ro.hardware}.rc
 import /init.usb.configfs.rc
 import /init.${ro.zygote}.rc
 
-# Include CM's extra init file
-import /init.cm.rc
+# Include Validus's extra init file
+import /init.validus.rc
 
 
 on early-init
