--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -10,8 +10,7 @@ import /init.${ro.hardware}.rc
 import /init.usb.configfs.rc
 import /init.${ro.zygote}.rc
 
-# Include SLIM's extra init file
-import /init.slim.rc
+import /init.validus.rc
 
 
 on early-init
